--- a/miaudocao_app/web/index.html
+++ b/miaudocao_app/web/index.html
@@ -28,6 +28,7 @@
 
   <title>miaudocao_app</title>
   <link rel="manifest" href="manifest.json">
+  <script src="https://maps.googleapis.com/maps/api/js?key=your_api_key"></script>
 </head>
 <body>
   <!-- This script installs service_worker.js to provide PWA functionality to
